Remove client section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Home | Flat Theme</title>
+    <title>KhoiNguyen iOS Blog</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/prettyPhoto.css" rel="stylesheet">
@@ -270,6 +270,7 @@
         </div>
     </section><!--/#recent-works-->
 
+    <!--
     <section id="testimonial" class="alizarin">
         <div class="container">
             <div class="row">
@@ -305,7 +306,7 @@
             </div>
         </div>
     </section><!--/#testimonial-->
-
+    -->
     <section id="bottom" class="wet-asphalt">
         <div class="container">
             <div class="row">
